Update NGINX compound images to use Docker Hub
4.5: FROM lucee/lucee-tomcat:latest
5.0: FROM lucee/lucee-tomcat:preview